--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "dreamzml/yii2-log-analysis",
-    "description": "yii2 git publish test system",
+    "description": "log analysis",
     "type": "project",
     "require": {
         "yiisoft/yii2": "*",
@@ -9,7 +9,7 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "dreamzml",
+            "name": "张梦林",
             "email": "dream_zml@163.com"
         }
     ],
