完成日志分析统计页面

--- a/composer.json
+++ b/composer.json
@@ -4,6 +4,7 @@
     "type": "project",
     "require": {
         "yiisoft/yii2": "*",
+        "yiisoft/yii2-debug": "*",
         "yiisoft/yii2-bootstrap": "*"
     },
     "license": "MIT",
