--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,5 @@
             "dreamzml\\LogAnalysis\\": ""
         }
     },
-    "minimum-stability": "beta"
+    "minimum-stability": "stable"
 }
